test scope major issues
# Conflicts:
#	coverage/src/test/java/gov/cms/ab2d/coverage/util/CoverageDataSetup.java
#	worker/src/test/java/gov/cms/ab2d/worker/processor/ContractProcessorUnitTest.java
#	worker/src/test/java/gov/cms/ab2d/worker/processor/coverage/CoverageDriverTest.java