@@ -23,8 +23,6 @@ import org.springframework.stereotype.Component;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 
-import static java.util.stream.Collectors.toList;
-
 @Component
 @Import(ContractServiceTestConfig.class)
 public class DataSetup {
@@ -52,7 +50,7 @@ public class DataSetup {
     public void cleanup() {
 
         List<PdpClient> clientsToDelete = domainObjects.stream().filter(object -> object instanceof PdpClient)
-                .map(object -> (PdpClient) object).collect(toList());
+                .map(object -> (PdpClient) object).toList();
         clientsToDelete.forEach(pdpClient -> {
             pdpClient = pdpClientRepository.findByClientId(pdpClient.getClientId());
 
@@ -63,7 +61,7 @@ public class DataSetup {
         });
 
         List<Role> rolesToDelete = domainObjects.stream().filter(object -> object instanceof Role)
-                .map(object -> (Role) object).collect(toList());
+                .map(object -> (Role) object).toList();
         rolesToDelete.forEach(role -> {
             Optional<Role> roleOptional = roleRepository.findRoleByName(role.getName());
 
